try to get rid of italic

--- a/notebooks/accumcurve.ipynb
+++ b/notebooks/accumcurve.ipynb
@@ -7,7 +7,8 @@
    "source": [
     "## Create accumulation curves\n",
     "- One curve in one plot\n",
-    "- Multiple curves in 1 plot"
+    "- Multiple curves in 1 plot\n",
+    "- Change richness into somehtin thats not italic"
    ]
   },
   {
@@ -45,17 +46,17 @@
     "\n",
     "# transpose (rows=OTUs, columns=sample)\n",
     "otu <- t(otu1)\n",
-    "sp <- specaccum(otu, method = \"random\", permutations = 100)\n",
+    "sp.all <- specaccum(otu, method = \"random\", permutations = 100)\n",
     "\n",
     "# Extract each of the permutations and reformat\n",
-    "perm <- sp$perm\n",
+    "perm <- sp.all$perm\n",
     "\n",
     "perm.tidy <- as.tibble(perm) %>% \n",
     "  mutate(Sites = 1:nrow(.)) %>% \n",
     "  gather(key = \"Permutation\", value = \"Species\", -Sites) \n",
     "\n",
     "# Extract the consensus richness per number of sites sampled and reformat\n",
-    "richness <- data.frame(Sites = sp$sites, Species=sp$richness)\n",
+    "richness <- data.frame(Sites = sp.all$sites, Species = sp.all$richness)\n",
     "\n",
     "# create the actual plot\n",
     "pdf('accumplot_all.mag.pdf')\n",
