rescaling reads to 100

--- a/notebooks/commands.ipynb
+++ b/notebooks/commands.ipynb
@@ -22,6 +22,34 @@
    },
    "outputs": [],
    "source": [
+    "# for the votus, try with scale of 100, resketch the reads using the sketch snakefile\n",
+    "snakemake -s Snakefile_sketch \\\n",
+    "--resources mem_mb=30000 \\\n",
+    "--rerun-triggers mtime -c 60 --rerun-incomplete -k -p --unlock\n",
+    "\n",
+    "# vOTUs are already sketchet at 100, in sig_files/signatures_concat/vOTUs.k21.s100.zip\n",
+    "\n",
+    "# run fmg\n",
+    "srun --account=ctbrowngrp -p bmm -J sk_read -t 30:00:00 -c 60 --mem=30gb --pty bash\n",
+    "\n",
+    "mamba activate branchwater\n",
+    "\n",
+    "sourmash scripts fastmultigather \\\n",
+    "../all_reads.txt \\\n",
+    "../../sig_files/signatures_concat/vOTUs.k21.s100.zip \\\n",
+    "-c 48 -k 21 -t 5000 -s 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
     "# run fastgather in the sourmash folder, via snakemake\n",
     "sourmash scripts fastgather \\\n",
     "{input.mtgreads} {input.query} -k 21 --scaled 1000 \\\n",
@@ -154,7 +182,7 @@
     "# resketch all MAGs so that all files have a name\n",
     "# in atlas/MAGs/genomes/all_fasta/fastafiles/\n",
     "\n",
-    "srun --account=ctbrowngrp -p med2 -J smash -t 6:00:00 -c 24 --mem=30gb --pty bash\n",
+    "srun --account=ctbrowngrp -p med2 -J smash -t 24:00:00 -c 1 --mem=30gb --pty bash\n",
     "module load parallel\n",
     "mamba activate sourmash \n",
     "for f in *.fasta\n",
@@ -198,7 +226,7 @@
     "sourmash scripts fastmultigather \\\n",
     "../all_reads.txt \\\n",
     "../../sig_files/signatures_concat/allvOTUs.zip \\\n",
-    "-c 36 -k 21 -t 2500"
+    "-c 36 -k 21 -t 5000 -s 100"
    ]
   },
   {
