add branchwater env

--- a/workflow/notebooks/atlas_commands.ipynb
+++ b/workflow/notebooks/atlas_commands.ipynb
@@ -89,6 +89,42 @@
    },
    "outputs": [],
    "source": [
+    "# missing tax files:\n",
+    "# do manually for 2 MAGs\n",
+    "\n",
+    "# dir for doing this\n",
+    "mkdir results/redo_taxonomy/\n",
+    "cd results/redo_taxonomy/\n",
+    "\n",
+    "# copy genomes\n",
+    "cp ../atlas/atlas_SRR11183532/genomes/genomes/AtH2023_SRR11183532_MAG7.fasta .\n",
+    "cp ../atlas/atlas_SRR7182054/genomes/genomes/AtH2023_SRR7182054_MAG7.fasta .\n",
+    "\n",
+    "# srun\n",
+    "srun --account=ctbrowngrp -p med2 -J smash -t 1:00:00 -c 16 --mem=60gb --pty bash\n",
+    "\n",
+    "\n",
+    "mamba activate gtdbtk\n",
+    "gtdbtk classify_wf --cpus 16 --genome_dir ./genomes --extension fasta \\\n",
+    "--skip_ani_screen --out_dir taxonomy\n",
+    "\n",
+    "\n",
+    "cp ../../atlas/atlas_SRR7182054/genomes/taxonomy/gtdb_taxonomy.tsv ./gtdb_taxonomy_SRR7182054.tsv\n",
+    "cp ../../atlas/atlas_SRR11183532/genomes/taxonomy/gtdb_taxonomy.tsv ./gtdb_taxonomy_SRR11183532.tsv\n",
+    "\n",
+    "nano ../../atlas_SRR7182054/genomes/taxonomy/gtdb_taxonomy.tsv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
     "# running atlas in a screen, still wil submit jobs to cluster\n",
     "srun --account=ctbrowngrp -p high2 -J atlas -t 48:00:00 -c 4 --mem=50gb --pty bash\n",
     "mamba activate branchwater\n",
@@ -97,6 +133,17 @@
     "snakemake --use-conda --resources mem_mb=50000 --rerun-triggers mtime \\\n",
     "-c 4 --rerun-incomplete -k --jobs 30 -n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
