--- a/workflow/notebooks/magstuff.ipynb
+++ b/workflow/notebooks/magstuff.ipynb
@@ -4,10 +4,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# how many mags etc\n",
+    "# how many mags etc, for 810 SRAs, 10,544 MAGs\n",
     "- how many\n",
     "- what taxonomy\n",
-    "- dereplication\n"
+    "- dereplication\n",
+    "\n",
+    "In: /group/ctbrowngrp2/scratch/annie/2023-swine-sra/results/MAGs/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Symlink the MAGs to one folder, so we can easily run stuff\n",
+    "# RGI and MINCED, mostly\n",
+    "ln -s /group/ctbrowngrp2/scratch/annie/2023-swine-sra/results/MAGs/genomes/*/*.fasta ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now run the move mags snakefile\n",
+    "srun --account=ctbrowngrp -p med2 -J mvmag -t 4:00:00 -c 4 --mem=50gb --pty bash\n",
+    "mamba activate branchwater\n",
+    "\n",
+    "snakemake --use-conda --resources mem_mb=50000 --rerun-triggers mtime \\\n",
+    "-c 1 --rerun-incomplete -k -s move_mags.smk -n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# run the python script to get info\n",
+    "python /group/ctbrowngrp2/scratch/annie/2023-swine-sra/workflow/check_files.py \\\n",
+    ". 250411_num_mags.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# taxonomy\n",
+    "mamba activate csvtk\n",
+    "csvtk concat *.tsv -t > ../250411_mag_taxonomy.tsv\n",
+    "# quality\n",
+    "csvtk concat  *.tsv -t > ../250411_mag_quality.tsv\n",
+    "\n"
    ]
   },
   {
@@ -23,47 +75,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# taxonomy\n",
-    "mamba activate csvtk\n",
-    "csvtk concat *.tsv -t > ../250325_mag_taxonomy.tsv\n",
-    "# quality\n",
-    "csvtk concat  *.tsv -t > ../250325_mag_quality.tsv\n",
+    "## Dereplicating, Using DREP. \n",
+    "## Could either split the MAGs by taxonomy, or just let drep handle it. It may accept tax or quality file\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import csv\n",
-    "\n",
-    "base_dir = os.getcwd()  # Current directory as base\n",
-    "genomes_dir = os.path.join(base_dir, \"genomes\")\n",
-    "taxonomy_dir = os.path.join(base_dir, \"taxonomy\")\n",
-    "quality_dir = os.path.join(base_dir, \"genome_quality\")\n",
-    "output_file = \"folder_summary.csv\"\n",
-    "\n",
-    "with open(output_file, \"w\", newline=\"\") as csvfile:\n",
-    "    writer = csv.writer(csvfile)\n",
-    "    writer.writerow([\"Folder\", \"Num_Items\", \"Taxonomy_Exists\", \"Quality_Exists\"])\n",
-    "    \n",
-    "    for subfolder in sorted(os.listdir(genomes_dir)):\n",
-    "        subfolder_path = os.path.join(genomes_dir, subfolder)\n",
-    "        \n",
-    "        if os.path.isdir(subfolder_path):\n",
-    "            num_items = len(os.listdir(subfolder_path))\n",
-    "            taxonomy_file = os.path.join(taxonomy_dir, f\"gtdb_taxonomy_{subfolder}.tsv\")\n",
-    "            quality_file = os.path.join(quality_dir, f\"genome_quality_{subfolder}.tsv\")\n",
-    "            \n",
-    "            taxonomy_exists = os.path.exists(taxonomy_file)\n",
-    "            quality_exists = os.path.exists(quality_file)\n",
-    "            \n",
-    "            writer.writerow([subfolder, num_items, taxonomy_exists, quality_exists])\n",
-    "\n",
-    "print(f\"CSV saved as {output_file}\")\n"
    ]
   }
  ],
